# Noise_Detection_and_Correction

./: .gitignore  AGENTS.md  HANDOFF.md  KLComplementary2_0_GUI.pyw  README.md  pyproject.toml
docs/: adobe_native_xmp_notes.md  repair_algorithm.md  technical_book.md  xmp_mask_sidecar.md
examples/: README.md
src/dust_mask_repair/: __init__.py  adobe_xmp.py  benchmark.py  cli.py  config.py  defects.py  frequency_repair.py  grain.py  gui.py  io.py  local_repair.py  mask.py  metrics.py  patch_repair.py  red_highlight.py  red_highlight_cli.py  repair.py  server.py  white_dust.py  white_dust_cli.py  workflow.py  xmp.py
tests/: test_adobe_xmp.py  test_benchmark.py  test_cli.py  test_defect_aware_baseline.py  test_defect_aware_blend.py  test_defect_aware_core_repair.py  test_defect_aware_quality.py  test_defect_aware_router.py  test_defect_classification.py  test_directional_repair.py  test_edge_guided_local_repair.py  test_fast_inpaint_repair.py  test_frequency_guided_benchmark.py  test_frequency_guided_repair.py  test_grain_reinject.py  test_gui.py  test_invariance.py  test_mask_loading.py  test_patch_repair.py  test_raw_io.py  test_red_highlight.py  test_red_highlight_regression.py  test_repair.py  test_server.py  test_small_local_repair.py  test_white_dust.py  test_workflow.py  test_xmp.py
web/: artifact_guard_test.html  index.html  white_dust.html
