[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dust-mask-repair"
version = "0.1.0"
description = "Mask-guided dust and spot repair for film scan images."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dust Mask Repair contributors" }
]
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
tiff = [
  "tifffile>=2024.0"
]
raw = [
  "rawpy>=0.20"
]

[project.scripts]
dust-mask-repair = "dust_mask_repair.cli:main"
dust-mask-repair-web = "dust_mask_repair.server:main"
dust-mask-detect-red = "dust_mask_repair.red_highlight_cli:main"
dust-mask-repair-red = "dust_mask_repair.red_highlight_cli:repair_main"
dust-mask-detect-white = "dust_mask_repair.white_dust_cli:main"
dust-mask-repair-white = "dust_mask_repair.white_dust_cli:repair_main"
dust-mask-repair-gui = "dust_mask_repair.gui:main"
dust-mask-benchmark = "dust_mask_repair.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
